--- a/index.html
+++ b/index.html
@@ -12,35 +12,39 @@
     <section class="container-section">
       <h4 class="section-header">New watches</h4>
       <h1 class="main-title">Green And Bronze—The Match Made In Heaven</h1>
-      <ul class="man-s-watch">
-        <li>
-          <img src="./images/man-s-hand.png" alt="watch on the hand" />
-        </li>
-        <li>
-          <img src="./images/green-watch.png" alt="green-watch" />
-        </li>
-      </ul>
+      <nav class="man-s-watch">
+        <ul>
+          <li>
+            <img src="./images/man-s-hand.png" alt="watch on the hand" />
+          </li>
+          <li>
+            <img src="./images/green-watch.png" alt="green-watch" />
+          </li>
+        </ul>
+      </nav>
     </section>
 
     <section class="section-sale">
       <h1>Sale</h1>
-      <ul class="watch-shooting">
-        <li>
-          <img src="./images/image 66.png" alt="Watch" />
-        </li>
-        <li>
-          <img src="./images/image 67.png" alt="watch" />
-        </li>
-        <li>
-          <img src="./images/image 65.png" alt="watch" />
-        </li>
-        <li>
-          <img src="./images/image 69.png" alt="watch" />
-        </li>
-        <li>
-          <img src="./images/img-3.png" alt="" />
-        </li>
-      </ul>
+      <nav class="watch-shooting">
+        <ul>
+          <li>
+            <img src="./images/representation-1.png" alt="Watch" />
+          </li>
+          <li>
+            <img src="./images/representation-2.png" alt="watch" />
+          </li>
+          <li>
+            <img src="./images/representation-3.png" alt="watch" />
+          </li>
+          <li>
+            <img src="./images/representation-4.png" alt="watch" />
+          </li>
+          <li>
+            <img src="./images/big-plan.png" alt="" />
+          </li>
+        </ul>
+      </nav>
       <div class="info-watch"></div>
       <h2 class="watch-s-name">Greenlane Watch By Police For MenHT</h2>
       <h4 class="product-tag">Product tag: PEWJK2227003</h4>
